fix equation text overflowing improperly

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,3 +20,7 @@
 .p-6 {
   padding: ($spacer * 0.75);
 }
+
+.min-width-0 {
+  min-width: 0;
+}
